// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/metadata/pkg/pb/types;pbtypes";

message EtcdConfig {
	string user = 1;
	string password = 2;
	int32 max_txn_ops = 3;
	int32 timeout_seconds = 4;

	repeated EtcdEndpoint node_list = 5;
}

message EtcdEndpoint {
	string host = 1;
	int32 port = 2;
}
